<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kbd.filemanager.MainActivity">

    <item
        android:id="@+id/lang"
        android:orderInCategory="100"
        android:title="@string/languge"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/create_file"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/createFolder"></item>

    <item
        android:id="@+id/sort_size"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/sortSize"></item>
    <item
        android:id="@+id/sort_name"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/sortName"></item>


</menu>
