<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.kbd.filemanager.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

            <!--<ImageButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="2"-->
            <!--app:srcCompat="@android:drawable/ic_search_category_default" />-->
            <Button
                android:id="@+id/search_dialog_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="220dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_search"
                android:visibility="visible" />

        </android.support.v7.widget.Toolbar>



        <android.support.design.widget.TabLayout
            android:id="@+id/nav_tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TabItem
                android:id="@+id/wanaContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <android.support.design.widget.TabItem
                android:id="@+id/phoneStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_storage" />

            <android.support.design.widget.TabItem
                android:id="@+id/memoryStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd_card" />
        </android.support.design.widget.TabLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
