<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?android:attr/textColorLink"
    tools:context="com.example.kbd.filemanager.Home">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/blueprint"
                    android:text="" />

                <TextView
                    android:id="@+id/intxv"
                    android:layout_width="316dp"
                    android:layout_height="41dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/phone_storage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/briefcase"
                    android:padding="10dp"
                    android:text="" />

                <TextView
                    android:id="@+id/ex-txv"
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/sd_card" />

            </LinearLayout>

            <GridLayout
                android:id="@+id/media_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorAccent"
                android:backgroundTintMode="src_over"
                android:columnCount="2"
                android:elevation="50dp"
                android:padding="10dp"
                android:rowCount="1"
                android:theme="@android:style/Theme.Material" tools:targetApi="lollipop">

                <LinearLayout
                    android:id="@+id/image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/image_button"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/photos" />

                    <TextView
                        android:id="@+id/image_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/images" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movies_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/movies_btn"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/videoplayer"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/movie_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movies" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/music_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/music_btn"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/musicplayer2" />

                    <TextView
                        android:id="@+id/music_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/music" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/doc_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/doc_btn"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/document"
                        android:padding="20dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/documents" />
                </LinearLayout>

            </GridLayout>


        </LinearLayout>
    </ScrollView>

</android.widget.FrameLayout>
